[metadata]
name = Django Scampi CMS
author = Arizona Public Media
author-email =
summary = Content Management System Framework
description-file = README.md
home-page = https://github.com/azpm/libscampi
python-requires = >=2.7
license = BSD 3-Clause
classifier =
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[files]
packages = libscampi

[flake8]
select =
    B,
    B90,
    C,
    E,
    F,
    G,
    W
import-order-style = google
max-complexity = 10
max-line-length = 120
